# glassdoorcrawler

./: .gitignore  CHANGELOG.md  README.md  belohorizonte_vagas.xlsx  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentacao.md  tarefa_tecnica.md
.github/workflows/: ci.yml
dataset/: data_glassdoor.xlsx
docs/: decisao-ruleset-master.md  manutencao-regras-e-backlog.md  release-process.md
docs/templates/: decisao.md  release-notes.md
glassdoorcrawler/: __init__.py  cli.py  scraper.py
tests/: test_scraper.py
